namespace GT.Counters
{
    public enum ECloudChartStatus
    {
        VerySunny, Sunny, Cloudy, Thunder
    }
}