namespace GT.Items.Cards
{
    public enum ECardValue
    {
        // maybe these should be given more game-y names
        // set the values of the cards like this to make their
        // integer values easier to work with
        _1 = 1,
        _2 = 2,
        _3 = 3,
        _4 = 4,
        _5 = 5
    }
}